--- a/lib/gits_web/controllers/team_invite_html/new.html.heex
+++ b/lib/gits_web/controllers/team_invite_html/new.html.heex
@@ -1,15 +1,21 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Invite user to your account</h1>
+<.dashboard_sidebar
+  base={~p"/accounts/#{@conn.params["account_id"]}"}
+  request_path={@conn.request_path}
+/>
+<.main>
+  <.main_header title="Invite a member to your account"></.main_header>
 
-<.simple_form :let={f} for={@form} action={@action} method="POST">
-  <.input type="text" label="Email" field={f[:email]} />
-  <.input
-    type="select"
-    label="Email"
-    field={f[:role]}
-    options={[Admin: :admin, Editor: :editor, "Access Coordinator": :access_coordinator]}
-  />
+  <.simple_form :let={f} for={@form} action={@action} method="POST">
+    <.input type="text" label="Email" field={f[:email]} />
+    <.input
+      type="select"
+      label="Email"
+      field={f[:role]}
+      options={[Admin: :admin, Editor: :editor, "Access Coordinator": :access_coordinator]}
+    />
 
-  <div class="flex gap-6 items-center">
-    <.button>Invite</.button>
-  </div>
-</.simple_form>
+    <div class="flex items-center gap-6">
+      <.button>Invite</.button>
+    </div>
+  </.simple_form>
+</.main>
