--- a/lib/gits_web/controllers/team_member_html/new.html.heex
+++ b/lib/gits_web/controllers/team_member_html/new.html.heex
@@ -1,4 +1,4 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Invite user to your account</h1>
+<h1 class="font-poppins text-3xl font-semibold text-gray-900">Invite user to your account</h1>
 
 <.simple_form :let={f} for={@form} action={@action} method="POST">
   <.input type="text" label="Email" field={f[:email]} />
@@ -9,7 +9,7 @@
     options={[Admin: :admin, Editor: :editor, "Access Coordinator": :access_coordinator]}
   />
 
-  <div class="flex gap-6 items-center">
+  <div class="flex items-center gap-6">
     <.button>Invite</.button>
   </div>
 </.simple_form>
