authorize access to invites

--- a/lib/gits_web/controllers/team_invite_html/show.html.heex
+++ b/lib/gits_web/controllers/team_invite_html/show.html.heex
@@ -1,6 +1,6 @@
-<div class="h-screen flex items-center justify-center">
-  <div class="border rounded-2xl max-w-3xl p-12 space-y-8">
-    <h1 class="font-poppins font-semibold text-3xl text-gray-900">
+<div class="flex h-screen items-center justify-center">
+  <div class="max-w-3xl space-y-8 rounded-2xl border p-12">
+    <h1 class="font-poppins text-3xl font-semibold text-gray-900">
       You've been invited to join an account as
     </h1>
 
