--- a/lib/gits_web/live/event_address_live.html.heex
+++ b/lib/gits_web/live/event_address_live.html.heex
@@ -6,29 +6,34 @@
 
 <.main>
   <.main_header title="Choose address"></.main_header>
-  <div class="space-y-4 px-4">
-    <.simple_form
-      :let={f}
-      for={@form}
-      phx-change="search"
-      onkeydown="return event.key != 'Enter';"
-    >
-      <.input type="search" field={f[:query]} phx-debounce="250" />
-    </.simple_form>
 
-    <div class="grid gap-1">
-      <button
-        :for={item <- @list}
-        class="rounded-lg p-4 text-left outline-none hover:bg-gray-50 focus-visible:ring-1 focus-visible:ring-zinc-400"
-        phx-click="select_place"
-        phx-value-id={item.id}
+  <%= if is_nil(@place_id) do %>
+    <div class="space-y-4 px-4">
+      <.simple_form
+        :let={f}
+        for={@form}
+        phx-change="search"
+        onkeydown="return event.key != 'Enter';"
       >
-        <span><%= item.main_text %></span>
-        <span><%= item.secondary_text %></span>
-      </button>
+        <.input type="search" field={f[:query]} phx-debounce="250" />
+      </.simple_form>
+
+      <div class="grid gap-1">
+        <button
+          :for={item <- @list}
+          class="rounded-lg p-4 text-left outline-none hover:bg-gray-50 focus-visible:ring-1 focus-visible:ring-zinc-400"
+          phx-click="select_address"
+          phx-value-id={item.id}
+        >
+          <span><%= item.main_text %></span>
+          <span><%= item.secondary_text %></span>
+        </button>
+      </div>
+      <div class="flex items-center justify-between pt-4">
+        <.link href={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}>Cancel</.link>
+      </div>
     </div>
-    <div class="flex items-center justify-between pt-4">
-      <.link href={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}>Cancel</.link>
-    </div>
-  </div>
+  <% else %>
+    <div class="px-4">place details</div>
+  <% end %>
 </.main>
