--- a/lib/gits_web/live/event_address_live.html.heex
+++ b/lib/gits_web/live/event_address_live.html.heex
@@ -7,7 +7,7 @@
 <.main>
   <.main_header title="Choose address"></.main_header>
 
-  <%= if is_nil(@place_id) do %>
+  <%= if is_nil(@address) do %>
     <div class="space-y-4 px-4">
       <.simple_form
         :let={f}
@@ -34,6 +34,15 @@
       </div>
     </div>
   <% else %>
-    <div class="px-4">place details</div>
+    <div class="px-4">
+      <div class="grid">
+        <span><%= @address.name %></span>
+        <span><%= @address.formatted_address %></span>
+      </div>
+
+      <div class="flex items-center justify-between pt-4">
+        <.link href={~p"/accounts/#{@account_id}/events/#{@event_id}/address"}>Back</.link>
+      </div>
+    </div>
   <% end %>
 </.main>
