--- a/lib/gits_web/live/event_address_live.html.heex
+++ b/lib/gits_web/live/event_address_live.html.heex
@@ -42,6 +42,7 @@
 
       <div class="flex items-center justify-between pt-4">
         <.link href={~p"/accounts/#{@account_id}/events/#{@event_id}/address"}>Back</.link>
+        <.button phx-click="confirm_address">Confirm</.button>
       </div>
     </div>
   <% end %>
