use new venue instead of address

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -9,12 +9,12 @@
     </nav>
   </div>
   <div>
-    <.link
-      href="/tickets"
-      class="text-sm hover:bg-gray-100 px-4 p-2 rounded-xl hover:bg-gray-50 focus-visible:ring-1 focus-visible:ring-gray-400"
-    >
-      Tickets
-    </.link>
+    <!-- <.link -->
+    <!--   href="/tickets" -->
+    <!--   class="text-sm hover:bg-gray-100 px-4 p-2 rounded-xl hover:bg-gray-50 focus-visible:ring-1 focus-visible:ring-gray-400" -->
+    <!-- > -->
+    <!--   Tickets -->
+    <!-- </.link> -->
   </div>
   <%= if @current_user do %>
     <.link :if={false} href="/profile" class="text-sm bg-gray-100 px-4 p-2 rounded-lg ">
