try out event title

--- a/lib/gits_web/controllers/account_html/next.html.heex
+++ b/lib/gits_web/controllers/account_html/next.html.heex
@@ -1,12 +1,12 @@
 <div class="w-full space-y-2 bg-zinc-50 p-2">
-  <div class="flex gap-4 px-2 sm:divide-x">
+  <div class="flex items-center gap-2 px-2 sm:gap-4 sm:divide-x">
     <div>
       <span class="text-2xl font-black italic">GiTS</span>
     </div>
-    <div class=" flex grow items-center justify-between pl-4">
-      <div class="inline-flex items-center gap-2">
-        <span>Treehouse Inc</span>
-        <.icon name="hero-chevron-down-mini" />
+    <div class=" flex grow items-center justify-between overflow-hidden pl-2 sm:pl-4">
+      <div class="max-w-40 inline-flex items-center gap-2 truncate rounded-lg border p-1 px-2 text-sm">
+        <span class=" truncate">Treehouse Inc because we know the things</span>
+        <.icon name="hero-chevron-down-mini" class="shrink-0" />
       </div>
       <div class="hidden items-center gap-4 lg:inline-flex">
         <span
@@ -31,10 +31,34 @@
         <span class="hidden pr-1.5 font-medium sm:inline-flex">Create</span>
       </button>
 
-      <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600">
+      <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden">
         <.icon name="hero-bars-2" />
       </button>
     </div>
   </div>
-  <div class="rounded-lg bg-white p-4 shadow"></div>
+  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
+  <!--   <div class="p-4 py-12"> -->
+  <!--     <h1 class="text-3xl font-semibold">Overview</h1> -->
+  <!--   </div> -->
+  <!-- </div> -->
+  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
+  <!--   <div class="p-4 py-12"> -->
+  <!--     <h1 class="text-3xl font-semibold">Events</h1> -->
+  <!--   </div> -->
+  <!-- </div> -->
+  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
+  <!--   <div class="p-4 py-12"> -->
+  <!--     <h1 class="text-3xl font-semibold">Team</h1> -->
+  <!--   </div> -->
+  <!-- </div> -->
+  <div class="space-4 rounded-lg bg-white shadow">
+    <div class="space-y-2 p-4 py-12 lg:p-6 lg:py-14">
+      <div class="flex gap-1">
+        <span class="text-sm font-medium text-zinc-400">Events</span>
+        <span class="text-sm font-medium text-zinc-400">/</span>
+        <span class="text-sm font-medium text-zinc-700">Event Details</span>
+      </div>
+      <h1 class="text-2xl font-semibold">The Ultimate Cheese Event</h1>
+    </div>
+  </div>
 </div>
