--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -1,13 +1,20 @@
-<div class="min-h-dvh w-full space-y-2 bg-zinc-50 p-2">
-  <div class="flex items-center gap-2 px-2 sm:gap-4 sm:divide-x">
+<div class="min-h-dvh flex w-full flex-col space-y-2 bg-zinc-50 p-2">
+  <div class="flex items-center gap-4 px-2">
     <div>
       <span class="text-2xl font-black italic">GiTS</span>
     </div>
-    <div class=" flex grow items-center justify-between overflow-hidden pl-2 sm:pl-4">
-      <div class="max-w-40 inline-flex items-center gap-2 truncate rounded-lg border p-2 text-sm">
-        <span class=" truncate">Treehouse Inc because we know the things</span>
+    <div class="flex grow items-center justify-between overflow-hidden border-l pl-2">
+      <button
+        phx-click={
+          JS.toggle_class("hidden", to: "#modal_backdrop")
+          |> JS.toggle_class("hidden", to: "#account_selector_dropdown")
+          |> JS.toggle_class("grid", to: "#account_selector_dropdown")
+        }
+        class="max-w-44 absolute z-40 inline-flex items-center gap-1 truncate rounded-lg bg-white p-2 text-sm"
+      >
+        <span class="truncate font-medium">Treehouse Inc</span>
         <.icon name="hero-chevron-down-mini" class="shrink-0" />
-      </div>
+      </button>
       <div class="hidden items-center gap-4 lg:inline-flex">
         <span
           :for={n <- @nav}
@@ -38,4 +45,24 @@
       </div>
     </div>
   </div>
+
+  <div class="grow space-y-8 rounded-lg bg-white p-4 py-16 shadow lg:p-16"></div>
+</div>
+
+<div
+  id="modal_backdrop"
+  class="bg-black/10 fixed inset-0 z-30 hidden"
+  phx-click={
+    JS.remove_class("grid", to: "#account_selector_dropdown")
+    |> JS.add_class("hidden", to: "#account_selector_dropdown")
+    |> JS.add_class("hidden", to: "#modal_backdrop")
+  }
+>
+</div>
+<div
+  id="account_selector_dropdown"
+  class="max-w-64 fixed top-12 left-24 z-40 hidden w-full gap-1 rounded-xl bg-white p-1 shadow-md"
+>
+  <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Treehouse Inc</div>
+  <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Create new account</div>
 </div>
