--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -6,9 +6,20 @@
     <div class="flex grow items-center justify-between overflow-hidden border-l pl-2">
       <button
         phx-click={
-          JS.toggle_class("hidden", to: "#modal_backdrop")
-          |> JS.toggle_class("hidden", to: "#account_selector_dropdown")
-          |> JS.toggle_class("grid", to: "#account_selector_dropdown")
+          JS.toggle(
+            to: "#account_selector_backdrop",
+            in: {"transition-all transform ease-out duration-300", "opacity-0", "opacity-100"},
+            out: {"transition-all transform ease-out duration-300", "opacity-100", "opacity-0"}
+          )
+          |> JS.toggle(
+            to: "#account_selector_dropdown",
+            in:
+              {"transition-all transform ease-out duration-150",
+               "-translate-y-8 scale-90 opacity-0", "translate-y-0 scale-100 opacity-100"},
+            out:
+              {"transition-all transform ease-out duration-150",
+               "translate-y-0 scale-100 opacity-100", "-translate-y-8 scale-90 opacity-0"}
+          )
         }
         class="max-w-44 absolute z-40 inline-flex items-center gap-1 truncate rounded-lg bg-white p-2 text-sm"
       >
@@ -49,19 +60,12 @@
   <div class="grow space-y-8 rounded-lg bg-white p-4 py-16 shadow lg:p-16"></div>
 </div>
 
-<div
-  id="modal_backdrop"
-  class="bg-black/10 fixed inset-0 z-30 hidden"
-  phx-click={
-    JS.remove_class("grid", to: "#account_selector_dropdown")
-    |> JS.add_class("hidden", to: "#account_selector_dropdown")
-    |> JS.add_class("hidden", to: "#modal_backdrop")
-  }
->
+<div id="account_selector_backdrop" class="bg-black/10 fixed inset-0 z-30" style="display: none">
 </div>
 <div
   id="account_selector_dropdown"
-  class="max-w-64 fixed top-12 left-24 z-40 hidden w-full gap-1 rounded-xl bg-white p-1 shadow-md"
+  class="max-w-64 fixed top-12 left-24 z-40 grid w-full gap-1 rounded-xl bg-white p-1 shadow-md"
+  style="display: none"
 >
   <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Treehouse Inc</div>
   <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Create new account</div>
