--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -5,8 +5,10 @@
     </div>
     <div class="flex grow items-center justify-between overflow-hidden border-l pl-2">
       <button
+        id="account_selector"
         phx-click={
-          JS.toggle(
+          JS.toggle_class("absolute z-40")
+          |> JS.toggle(
             to: "#account_selector_backdrop",
             in: {"transition-all transform ease-out duration-300", "opacity-0", "opacity-100"},
             out: {"transition-all transform ease-out duration-300", "opacity-100", "opacity-0"}
@@ -21,7 +23,7 @@
                "translate-y-0 scale-100 opacity-100", "-translate-y-8 scale-90 opacity-0"}
           )
         }
-        class="max-w-44 absolute z-40 inline-flex items-center gap-1 truncate rounded-lg bg-white p-2 text-sm"
+        class="max-w-44 inline-flex items-center gap-1 truncate rounded-lg bg-zinc-50 p-2 text-sm"
       >
         <span class="truncate font-medium">Treehouse Inc</span>
         <.icon name="hero-chevron-down-mini" class="shrink-0" />
@@ -49,7 +51,7 @@
         <span class="hidden pr-1.5 font-medium sm:inline-flex">Create</span>
       </button>
 
-      <div class="relative">
+      <div class="">
         <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden">
           <.icon name="hero-bars-2" />
         </button>
@@ -62,7 +64,8 @@
 
 <div
   phx-click={
-    JS.hide(
+    JS.remove_class("absolute z-40", to: "#account_selector")
+    |> JS.hide(
       to: "#account_selector_backdrop",
       transition: {"transition-all transform ease-out duration-300", "opacity-100", "opacity-0"}
     )
@@ -83,6 +86,22 @@
   class="max-w-64 fixed top-12 left-24 z-40 grid w-full gap-1 rounded-xl bg-white p-1 shadow-md"
   style="display: none"
 >
-  <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Treehouse Inc</div>
-  <div class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50">Create new account</div>
+  <div
+    phx-click={
+      JS.remove_class("absolute z-40", to: "#account_selector")
+      |> JS.hide(
+        to: "#account_selector_backdrop",
+        transition: {"transition-all transform ease-out duration-300", "opacity-100", "opacity-0"}
+      )
+      |> JS.hide(
+        to: "#account_selector_dropdown",
+        transition:
+          {"transition-all transform ease-out duration-150",
+           "translate-y-0 scale-100 opacity-100", "-translate-y-8 scale-90 opacity-0"}
+      )
+    }
+    class="rounded-md p-3 px-4 text-sm font-medium hover:bg-zinc-50"
+  >
+    Treehouse Inc
+  </div>
 </div>
