--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -1,3 +1,4 @@
+<% navigation = [%{label: "Overview", icon: "hero-users-mini"}] %>
 <div class="min-h-dvh flex w-full flex-col space-y-2 bg-zinc-50 p-2">
   <div class="flex items-center gap-4 px-2">
     <div>
@@ -29,18 +30,19 @@
         <.icon name="hero-chevron-down-mini" class="shrink-0" />
       </button>
       <div class="hidden items-center gap-4 lg:inline-flex">
-        <span
-          :for={n <- @nav}
-          class="rounded-full p-1 px-2.5 text-sm font-medium first:border first:bg-white"
+        <button
+          :for={n <- navigation}
+          class={[
+            "flex items-center gap-1 rounded-full p-1 px-2.5 text-sm font-medium text-zinc-500",
+            if(@title == n.label, do: "border bg-white text-zinc-800", else: "")
+          ]}
         >
-          <%= n %>
-        </span>
+          <.icon name={n.icon} />
+          <span><%= n.label %></span>
+        </button>
       </div>
       <div class="hidden gap-2 lg:flex">
-        <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600">
-          <.icon name="hero-bell" />
-        </button>
-        <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600">
+        <button class="flex items-center gap-2 rounded-xl p-1.5 text-sm text-zinc-600">
           <.icon name="hero-cog-6-tooth" />
         </button>
       </div>
@@ -51,10 +53,40 @@
         <span class="hidden pr-1.5 font-medium sm:inline-flex">Create</span>
       </button>
 
-      <div class="">
-        <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden">
+      <div class="relative">
+        <button
+          class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden"
+          phx-click={JS.show(to: "#menu_dropdown")}
+        >
           <.icon name="hero-bars-2" />
         </button>
+        <div
+          phx-click-away={JS.hide(to: "#menu_dropdown")}
+          class="absolute top-0 right-0 space-y-1 rounded-lg border bg-white p-1 shadow-lg"
+          id="menu_dropdown"
+          style="display: none"
+        >
+          <div class="flex justify-end border-b pb-1">
+            <button
+              class={[
+                "flex items-center gap-2 rounded-xl p-1 text-sm text-zinc-600 hover:bg-zinc-50",
+                if(@title == "Settings", do: "bg-zinc-100", else: "")
+              ]}
+              phx-click={JS.navigate("settings") |> JS.hide(to: "#menu_dropdown")}
+            >
+              <.icon name="hero-cog-6-tooth" />
+            </button>
+          </div>
+          <button
+            :for={n <- navigation}
+            class={[
+              "inline-flex w-48 rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100",
+              if(@title == n.label, do: "bg-zinc-100", else: "")
+            ]}
+          >
+            <%= n.label %>
+          </button>
+        </div>
       </div>
     </div>
   </div>
