--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -1,4 +1,13 @@
-<% navigation = [%{label: "Overview", icon: "hero-users-mini"}] %>
+<% navigation = [
+  %{label: "Overview", icon: "hero-rectangle-group-mini", path: "/accounts/#{@slug}/next"},
+  %{label: "Events", icon: "hero-calendar-days-mini", path: "/accounts/#{@slug}/next/events"},
+  %{label: "Team", icon: "hero-users-mini", path: "/accounts/#{@slug}/next/team"},
+  %{
+    label: "Sign out",
+    icon: "hero-arrow-left-start-on-rectangle-mini",
+    path: "/accounts/#{@slug}"
+  }
+] %>
 <div class="min-h-dvh flex w-full flex-col space-y-2 bg-zinc-50 p-2">
   <div class="flex items-center gap-4 px-2">
     <div>
@@ -30,21 +39,28 @@
         <.icon name="hero-chevron-down-mini" class="shrink-0" />
       </button>
       <div class="hidden items-center gap-4 lg:inline-flex">
-        <button
+        <.link
           :for={n <- navigation}
+          navigate={n.path}
           class={[
-            "flex items-center gap-1 rounded-full p-1 px-2.5 text-sm font-medium text-zinc-500",
-            if(@title == n.label, do: "border bg-white text-zinc-800", else: "")
+            "flex items-center gap-1 rounded-full border p-1 px-2.5 text-sm font-medium text-zinc-500",
+            if(@title == n.label,
+              do: "border-zinc-300 bg-white text-zinc-800",
+              else: "border-zinc-50"
+            )
           ]}
         >
           <.icon name={n.icon} />
           <span><%= n.label %></span>
-        </button>
+        </.link>
       </div>
       <div class="hidden gap-2 lg:flex">
-        <button class="flex items-center gap-2 rounded-xl p-1.5 text-sm text-zinc-600">
+        <.link
+          navigate={"/accounts/#{@slug}/next/settings"}
+          class="flex items-center gap-2 rounded-xl bg-zinc-100 p-1.5 text-sm text-zinc-600"
+        >
           <.icon name="hero-cog-6-tooth" />
-        </button>
+        </.link>
       </div>
     </div>
     <div class="flex grow items-center justify-end gap-4 pl-4 sm:grow-0">
@@ -62,16 +78,12 @@
         </button>
         <div
           phx-click-away={JS.hide(to: "#menu_dropdown")}
-          class="absolute top-0 right-0 space-y-1 rounded-lg border bg-white p-1 shadow-lg"
+          class="absolute top-10 right-0 space-y-1 rounded-lg border bg-white p-1 shadow-md"
           id="menu_dropdown"
-          style="display: none"
         >
           <div class="flex justify-end border-b pb-1">
             <button
-              class={[
-                "flex items-center gap-2 rounded-xl p-1 text-sm text-zinc-600 hover:bg-zinc-50",
-                if(@title == "Settings", do: "bg-zinc-100", else: "")
-              ]}
+              class="flex items-center gap-2 rounded-xl p-1 text-sm text-zinc-600 hover:bg-zinc-50"
               phx-click={JS.navigate("settings") |> JS.hide(to: "#menu_dropdown")}
             >
               <.icon name="hero-cog-6-tooth" />
@@ -79,10 +91,7 @@
           </div>
           <button
             :for={n <- navigation}
-            class={[
-              "inline-flex w-48 rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100",
-              if(@title == n.label, do: "bg-zinc-100", else: "")
-            ]}
+            class="inline-flex w-48 rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100"
           >
             <%= n.label %>
           </button>
