--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -43,10 +43,10 @@
           :for={n <- navigation}
           navigate={n.path}
           class={[
-            "flex items-center gap-1 rounded-full border p-1 px-2.5 text-sm font-medium text-zinc-500",
+            "flex items-center gap-1 rounded-full border p-1 px-2.5 text-sm font-medium",
             if(@title == n.label,
               do: "border-zinc-300 bg-white text-zinc-800",
-              else: "border-zinc-50"
+              else: "border-zinc-50 text-zinc-500"
             )
           ]}
         >
@@ -57,7 +57,13 @@
       <div class="hidden gap-2 lg:flex">
         <.link
           navigate={"/accounts/#{@slug}/next/settings"}
-          class="flex items-center gap-2 rounded-xl bg-zinc-100 p-1.5 text-sm text-zinc-600"
+          class={[
+            "flex items-center gap-2 border rounded-xl p-1.5 text-sm",
+            if(@title == "Settings",
+              do: "border-zinc-300 bg-white text-zinc-800",
+              else: "bg-zinc-100 border-zinc-50 text-zinc-500"
+            )
+          ]}
         >
           <.icon name="hero-cog-6-tooth" />
         </.link>
@@ -72,25 +78,59 @@
       <div class="relative">
         <button
           class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden"
-          phx-click={JS.show(to: "#menu_dropdown")}
+          phx-click={
+            JS.show(
+              to: "#menu_dropdown",
+              transition:
+                {"transition-all transform ease-out duration-150",
+                 "-translate-y-10 scale-75 translate-x-6 opacity-0", "translate-y-0 opacity-100"}
+            )
+          }
         >
           <.icon name="hero-bars-2" />
         </button>
         <div
-          phx-click-away={JS.hide(to: "#menu_dropdown")}
+          phx-click-away={
+            JS.hide(
+              to: "#menu_dropdown",
+              transition:
+                {"transition-all transform ease-out duration-150", "",
+                 "-translate-y-10 translate-x-6 scale-75 opacity-0"}
+            )
+          }
           class="absolute top-10 right-0 space-y-1 rounded-lg border bg-white p-1 shadow-md"
           id="menu_dropdown"
+          style="display: none"
         >
           <div class="flex justify-end border-b pb-1">
             <button
               class="flex items-center gap-2 rounded-xl p-1 text-sm text-zinc-600 hover:bg-zinc-50"
-              phx-click={JS.navigate("settings") |> JS.hide(to: "#menu_dropdown")}
+              phx-click={
+                JS.hide(
+                  to: "#menu_dropdown",
+                  transition:
+                    {"transition-all transform ease-out duration-150",
+                     "translate-y-0 tranlate-x-0 scale-100 opacity-100",
+                     "-translate-y-10 translate-x-6 scale-75 opacity-0"}
+                )
+                |> JS.navigate("/accounts/#{@slug}/settings")
+              }
             >
               <.icon name="hero-cog-6-tooth" />
             </button>
           </div>
           <button
             :for={n <- navigation}
+            phx-click={
+              JS.hide(
+                to: "#menu_dropdown",
+                transition:
+                  {"transition-all transform ease-out duration-150",
+                   "translate-y-0 scale-100 opacity-100",
+                   "-translate-y-6 translate-x-6 scale-75 opacity-0"}
+              )
+              |> JS.navigate(n.path)
+            }
             class="inline-flex w-48 rounded-md p-2 px-4 text-sm font-medium hover:bg-zinc-100"
           >
             <%= n.label %>
