--- a/lib/gits_web/live/dashboard_live/overview.html.heex
+++ b/lib/gits_web/live/dashboard_live/overview.html.heex
@@ -1,82 +1,2 @@
-<div class="w-full space-y-2 bg-zinc-50 p-2">
-  <div class="flex items-center gap-2 px-2 sm:gap-4 sm:divide-x">
-    <div>
-      <span class="text-2xl font-black italic">GiTS</span>
-    </div>
-    <div class=" flex grow items-center justify-between overflow-hidden pl-2 sm:pl-4">
-      <div class="max-w-40 inline-flex items-center gap-2 truncate rounded-lg border p-1 px-2 text-sm">
-        <span class=" truncate">Treehouse Inc because we know the things</span>
-        <.icon name="hero-chevron-down-mini" class="shrink-0" />
-      </div>
-      <div class="hidden items-center gap-4 lg:inline-flex">
-        <span
-          :for={n <- @nav}
-          class="rounded-full p-1 px-2.5 text-sm font-medium first:border first:bg-white"
-        >
-          <%= n %>
-        </span>
-      </div>
-      <div class="hidden gap-2 lg:flex">
-        <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600">
-          <.icon name="hero-bell" />
-        </button>
-        <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600">
-          <.icon name="hero-cog-6-tooth" />
-        </button>
-      </div>
-    </div>
-    <div class="flex grow items-center justify-end gap-4 pl-4 sm:grow-0">
-      <button class="flex items-center gap-2 rounded-xl bg-black p-2 text-sm text-white">
-        <.icon name="hero-plus-mini" />
-        <span class="hidden pr-1.5 font-medium sm:inline-flex">Create</span>
-      </button>
+<h1 class="text-4xl font-semibold">Overview</h1>
 
-      <button class="flex items-center gap-2 rounded-xl p-1.5 px-2 text-sm text-zinc-600 lg:hidden">
-        <.icon name="hero-bars-2" />
-      </button>
-    </div>
-  </div>
-  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
-  <!--   <div class="p-4 py-12"> -->
-  <!--     <h1 class="text-3xl font-semibold">Overview</h1> -->
-  <!--   </div> -->
-  <!-- </div> -->
-  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
-  <!--   <div class="p-4 py-12"> -->
-  <!--     <h1 class="text-3xl font-semibold">Events</h1> -->
-  <!--   </div> -->
-  <!-- </div> -->
-  <!-- <div class="space-4 rounded-lg bg-white shadow"> -->
-  <!--   <div class="p-4 py-12"> -->
-  <!--     <h1 class="text-3xl font-semibold">Team</h1> -->
-  <!--   </div> -->
-  <!-- </div> -->
-  <div class="space-y-8 rounded-lg bg-white p-4 py-16 shadow lg:p-16">
-    <div class="mx-auto max-w-screen-2xl space-y-4">
-      <div class="flex gap-2">
-        <span class="text-sm text-zinc-400">Events</span>
-        <span class="text-sm text-zinc-400">/</span>
-        <span class="text-sm text-zinc-700">Event Details</span>
-      </div>
-      <div class="flex items-start gap-2">
-        <div class="aspect-[4/5] h-20 bg-zinc-200"></div>
-        <div class="grid w-full gap-4">
-          <h1 class="text-2xl">The Ultimate Cheese Festival</h1>
-          <div class="flex justify-end gap-4 text-sm">
-            <button class="border bg-white p-1">Published</button>
-            <button class="border bg-white p-1">More</button>
-          </div>
-        </div>
-      </div>
-      <div class="flex flex-wrap gap-4 border lg:flex-nowrap">
-        <div class="w-full border">
-          <div>summary</div>
-          <div>details</div>
-          <div>graphics</div>
-          <div>tickets</div>
-        </div>
-        <div class="w-full max-w-lg border">side</div>
-      </div>
-    </div>
-  </div>
-</div>
