--- a/lib/gits_web/live/dashboard_live/settings.html.heex
+++ b/lib/gits_web/live/dashboard_live/settings.html.heex
@@ -1,1 +1,17 @@
-<div>settings</div>
+<h1 class="text-4xl font-semibold">Settings</h1>
+<div class="space-y-8 rounded-lg py-4 lg:py-8">
+  <h2 class="text-xl font-medium">Billing & Payouts</h2>
+  <div class="grid gap-4 md:grid-cols-2">
+    <span class="col-span-full font-medium">Select default payment provider</span>
+    <label
+      :for={provider <- ["Paystack", "Payfast"]}
+      class="rounded border p-4 text-sm has-[:checked]:border-zinc-800 md:rounded-md"
+    >
+      <span><%= provider %></span>
+      <input type="radio" name="payment-provider" class="peer sr-only" value={provider} />
+    </label>
+  </div>
+  <div>
+    <.link class="col-span-full text-sm font-medium">Setup paystack</.link>
+  </div>
+</div>
