--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -14,7 +14,7 @@
     </script>
     <Turnstile.script />
   </head>
-  <body class="font-poppins bg-white antialiased">
+  <body class="font-poppins overflow-hidden bg-white antialiased">
     <%= @inner_content %>
   </body>
 </html>
