--- a/lib/gits_web/live/dashboard_live/settings.html.heex
+++ b/lib/gits_web/live/dashboard_live/settings.html.heex
@@ -1,5 +1,5 @@
 <h1 class="text-4xl font-semibold">Settings</h1>
-<div class="space-y-8 rounded-lg">
+<div :if={false} class="space-y-8 rounded-lg">
   <h2 class="text-2xl font-medium">General</h2>
   <div class="grid gap-4">
     <h3 class="col-span-full text-lg font-medium">Account information</h3>
@@ -16,7 +16,7 @@
       <span></span>
     </label>
   </div>
-  <div>
+  <div :if={false}>
     <.link class="col-span-full text-sm font-medium">Setup paystack</.link>
   </div>
 </div>
@@ -26,11 +26,25 @@
   <div class="grid gap-4 md:grid-cols-2">
     <h3 class="col-span-full text-lg font-medium">Select default payment provider</h3>
     <label
-      :for={provider <- ["Paystack", "Payfast"]}
+      :for={
+        provider <- [
+          %{name: "Paystack", status: "Not setup", disabled: false},
+          %{name: "Payfast", status: "Not ready yet", disabled: true}
+        ]
+      }
       class="flex items-center justify-between rounded border p-4 text-sm has-[:checked]:bg-zinc-100/50 has-[:checked]:border-zinc-800 md:rounded-md"
     >
-      <span><%= provider %></span>
-      <input type="radio" name="payment-provider" class="peer sr-only" value={provider} />
+      <div class="grid gap-2">
+        <span class="font-medium"><%= provider.name %></span>
+        <span class="text-zinc-700"><%= provider.status %></span>
+      </div>
+      <input
+        type="radio"
+        name="payment-provider"
+        class="sr-only"
+        value={provider.name}
+        disabled={provider.disabled}
+      />
       <.icon name="hero-check-circle-mini" class="peer-checked:inline-flex hidden" />
     </label>
   </div>
