ring offset for link

--- a/lib/gits_web/components/layouts/dashboard_next_detail.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next_detail.html.heex
@@ -5,7 +5,7 @@
     </div>
     <div class="flex grow items-center gap-4 pl-4">
       <h2 class="grow text-lg font-semibold text-zinc-800"><%= @title %></h2>
-      <.link class="p-1.5 flex">
+      <.link class="flex gap-2 focus:outline-none focus:ring-2 focus:ring-zinc-500 focus:ring-offset-2 rounded-md">
         <.icon name="hero-question-mark-circle" />
         <span class="hidden sm:inline">Do you need help?</span>
       </.link>
