--- a/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
+++ b/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
@@ -7,7 +7,11 @@
 </.simple_form>
 
 <div class="flex gap-6">
-  <.link class="font-medium" navigate={~p"/accounts/#{@slug}/next/settings"} replace>
+  <.link
+    class="font-medium text-sm focus:outline-none focus:ring-2 ring-zinc-500 focus:ring-offset-2 rounded-md"
+    navigate={~p"/accounts/#{@slug}/next/settings"}
+    replace
+  >
     Cancel
   </.link>
 </div>
