--- a/lib/gits_web/live/auth_live/form.html.heex
+++ b/lib/gits_web/live/auth_live/form.html.heex
@@ -6,6 +6,7 @@
   phx-trigger-action={@trigger_action}
   action={@action}
   method="POST"
+  class="space-y-10"
 >
   <h1 class="font-poppins text-3xl font-semibold text-gray-900"><%= @title %></h1>
   <div :if={@is_register?} class="mb-5">
