--- a/lib/gits_web/live/auth_live/forgot_password.html.heex
+++ b/lib/gits_web/live/auth_live/forgot_password.html.heex
@@ -6,12 +6,13 @@
   phx-trigger-action={@trigger_action}
   action={@action}
   method="POST"
+  class="space-y-10"
 >
-  <h1 class="font-poppins font-semibold text-3xl text-gray-900">Password reset</h1>
+  <h1 class="font-poppins text-3xl font-semibold text-gray-900">Password reset</h1>
 
   <.input type="email" label="Email" field={f[:email]} />
 
-  <div class="flex gap-6 items-center">
+  <div class="flex items-center gap-6">
     <.button>Reset password</.button>
   </div>
 
