--- a/lib/gits_web/live/auth_live/password_reset.html.heex
+++ b/lib/gits_web/live/auth_live/password_reset.html.heex
@@ -6,14 +6,15 @@
   phx-trigger-action={@trigger_action}
   action={@action}
   method="POST"
+  class="space-y-10"
 >
-  <h1 class="font-poppins font-semibold text-3xl text-gray-900">Password reset</h1>
+  <h1 class="font-poppins text-3xl font-semibold text-gray-900">Password reset</h1>
 
   <input type="hidden" name="user[reset_token]" value={@token} />
 
   <.input type="password" label="New password" field={f[:password]} />
 
-  <div class="flex gap-6 items-center">
+  <div class="flex items-center gap-6">
     <.button>Reset password</.button>
   </div>
 
