--- a/lib/gits_web/components/layouts/dashboard_next.html.heex
+++ b/lib/gits_web/components/layouts/dashboard_next.html.heex
@@ -188,6 +188,12 @@
     </div>
   </div>
 
+  <div class="sticky top-0 flex items-center justify-between gap-4" id="header">
+    <div>
+      <span class="text-2xl font-black italic">GiTS</span>
+    </div>
+  </div>
+
   <div class="z-10 mx-auto w-full max-w-screen-2xl grow space-y-10 rounded-lg bg-white p-4 py-20 shadow md:space-y-16 md:px-8">
     <%= @inner_content %>
   </div>
