--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -1,30 +1,53 @@
 <!-- <div class="h-dvh flex w-full flex-col gap-2 bg-zinc-50 p-2 2xl:gap-4 2xl:p-4"> -->
 <!--   <div class="flex items-center gap-4" id="header"> -->
 <!--     <div> -->
-<!--       <span class="text-2xl font-black italic">GiTS</span> -->
 <!--     </div> -->
 <!--   </div> -->
 <!-- </div> -->
 <!-- <div class="relative"> -->
 <!--   <div class="p-4">fooo</div> -->
 <!-- </div> -->
-<div class="h-dvh relative overflow-auto">
-  <div class="h-[calc(100dvh-theme(space.40))] sticky top-0">
-    <div class="flex p-2">
+<div class="h-dvh relative overflow-auto bg-slate-100">
+  <div class="h-[calc(100dvh-theme(space.24))] relative sticky top-0 flex flex-col justify-center gap-8 overflow-hidden p-4 md:h-[calc(100dvh-theme(space.40))] md:p-16">
+    <div class="absolute inset-x-0 top-0 p-2">
       <div>
         <span class="text-2xl font-black italic">GiTS</span>
       </div>
     </div>
+
+    <div class="size-72 absolute top-0 left-4 animate-pulse rounded-full bg-purple-300 opacity-50 mix-blend-multiply blur-3xl lg:size-96">
+    </div>
+    <div class="size-40 absolute top-0 right-12 animate-pulse rounded-full bg-yellow-300 opacity-50 mix-blend-multiply blur-3xl md:size-52 md:right-64 xl:size-80 xl:top-40 2xl:right-96">
+    </div>
+    <div class="size-72 absolute top-72 left-28 animate-pulse rounded-full bg-pink-300 opacity-50 mix-blend-multiply blur-3xl xl:top-96">
+    </div>
+    <h1 class="text-5xl font-medium leading-tight md:text-6xl">
+      Unlock Unforgettable Experiences
+    </h1>
+    <p class="max-w-xl text-sm text-zinc-600">
+      We offer better security, faster check-in, and lower costs, ensureing more  profit for you. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+    </p>
+    <div class="flex items-center gap-8 font-medium">
+      <.link class="border-2 rounded-lg border-zinc-600 p-2 px-4 hover:underline">
+        Get started
+      </.link>
+      <.link class="hover:underline">
+        Why choose <span class="font-black italic text-zinc-700">GiTS</span>?
+      </.link>
+    </div>
   </div>
 
-  <div class="top-[calc(100dvh-theme(space.24))] absolute inset-0 p-2 md:top-[calc(100dvh-theme(space.40))]">
-    <div class="mx-auto w-full max-w-screen-xl rounded-lg bg-white p-4 shadow md:p-12">
-      <div class="mx-auto max-w-screen-md">
+  <div class="top-[calc(100dvh-theme(space.28))] absolute inset-0 px-2 md:top-[calc(100dvh-theme(space.52))]">
+    <div class="mx-auto w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow md:p-12">
+      <div class="mx-auto flex max-w-screen-md items-center gap-2">
         <input
           type="search"
           class="w-full rounded-md border-none bg-zinc-50 p-4 text-sm outline-none ring-1 ring-zinc-200 focus-visible:ring-zinc-400"
-          placeholder="Search"
+          placeholder="Search for an event, city, etc"
         />
+        <button class="flex rounded-lg p-3.5 outline-none hover:ring-1 hover:ring-zinc-200 focus-visible:ring-1 focus-visible:ring-zinc-400">
+          <.icon name="hero-magnifying-glass" />
+        </button>
       </div>
     </div>
   </div>
